Manifests/WeatherApi_Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weatherapi
  name: weatherapi
  namespace: weather
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: weatherapi
    component: netcore-app
  type: LoadBalancer
