Manifests/WeatherWebSite_Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weatherwebsite
  name: weatherwebsite
  namespace: weather
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 80
  selector:
    app: weatherwebsite
    component: angular-app
  type: LoadBalancer
