Manifests/WeatherApi_IngressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /weather-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: weatherapi
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: weatherapi
            port:
              number: 80
              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: weatherapi
            port: 
              number: 80
        path: /static(/|$)(.*)
